# agent-skills

./: AGENTS.md  PRIMITIVES.md  README.md
.claude-plugin/: marketplace.json
docs/: distribution.md
scripts/: package-claude-skill-zips.sh
skills/fulcra-agent-backup/: SKILL.md
skills/fulcra-agent-continuity/: SKILL.md
skills/fulcra-agent-directives/: SKILL.md
skills/fulcra-agent-health/: SKILL.md
skills/fulcra-agent-presence/: SKILL.md
skills/fulcra-agent-review/: SKILL.md
skills/fulcra-agent-roles/: SKILL.md
skills/fulcra-agent-teams/: SKILL.md
skills/fulcra-analytics/: README.md  SKILL.md  pyproject.toml
skills/fulcra-analytics/docs/: architecture.md  cli.md  client.md  loader.md  statistics.md
skills/fulcra-analytics/scripts/: validate_e2e.py
skills/fulcra-analytics/src/fulcra_analytics/: __init__.py  __main__.py  cli.py  client.py  loader.py  schemas.py  statistics.py
skills/fulcra-analytics/tests/: test_advanced_statistics.py  test_cli.py  test_client.py  test_loader.py  test_statistics.py
skills/fulcra-analytics/tests/fixtures/: first_olympiad_ml_stats_synthetic_v1.json
skills/fulcra-collect/: README.md
skills/fulcra-control-panel/: SKILL.md
skills/fulcra-dashboard/: SKILL.md
skills/fulcra-get-started/: SKILL.md
skills/fulcra-ingest/: SKILL.md
skills/fulcra-ingest-beta/: SKILL.md
skills/fulcra-memory/: SKILL.md
skills/fulcra-onboarding/: SKILL.md
skills/fulcra-onboarding-v2/: SKILL.md
skills/fulcra-primitives/: SKILL.md
skills/fulcra-skills-dashboard/: SKILL.md
skills/fulcra-takeout-ingestion/: SKILL.md
(+50 files in other folders)
